--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configuration du Firewall Dynamique
 DYNFW_API_URL=http://127.0.0.1:8000/block
-DYNFW_API_TOKEN=change_me_in_production
+DYNFW_API_TOKEN=MyToken
 DYNFW_LOGFILE=/var/log/auth.log
 DYNFW_DB=/var/lib/dynfw/dynfw.db
 DYNFW_THRESHOLD=5
